fixed issue with card effect on safari browsers

--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -196,7 +196,7 @@ header
 /* END About */
 
 .parallax-window
-  min-height: 400px
+  min-height: 450px
   background: transparent
   background-size: cover
   margin-bottom: 0
@@ -262,6 +262,9 @@ header
   .card-back
     background-color: $white-background
     -webkit-transform: rotateY(-180deg)
+    -ms-transform: rotateY(-180deg)
+    -moz-transform: rotateY(-180deg)
+    -o-transform: rotateY(-180deg)
     transform: rotateY(-180deg)
     color: #000
 
@@ -273,18 +276,24 @@ header
 
   .card.effect-hover:hover .card-front
     -webkit-transform: rotateY(-180deg)
+    -ms-transform: rotateY(-180deg)
+    -moz-transform: rotateY(-180deg)
+    -o-transform: rotateY(-180deg)
     transform: rotateY(-180deg)
 
   .card.effect-hover:hover .card-back
     -webkit-transform: rotateY(0)
+    -ms-transform: rotateY(0)
+    -moz-transform: rotateY(0)
+    -o-transform: rotateY(0)
     transform: rotateY(0)
 
 /* ##### End Skills ##### */
 
 .pre-portfolio-parallax
-  min-height: 400px
+  min-height: 450px
   background: transparent
-  background-size: contain
+  background-size: cover
   margin-bottom: 0
 
 
